# planf3

.claude/skills/hermes-oauth-openai-codex/: .env.sample  LICENSE  README.md  SKILL.md
.claude/skills/hermes-oauth-openai-codex/hermes_oauth_openai_codex/: __init__.py  __main__.py  auth_json.py  callback_server.py  cli.py  errors.py  login.py  openai_oauth.py  pkce.py  planf3_env.py  pyproject.toml  refresh.py
.claude/skills/planf3/scripts/: README.md  _codex_common.py  edit_gpt_image.py  generate_gpt_image.py
.claude/skills/planf3/workflows/: image-generation.md
